--- a/beamerexample-lecture-style.tex
+++ b/beamerexample-lecture-style.tex
@@ -1,15 +1,4 @@
-% Copyright 2007 by Till Tantau
-%
-% This file may be distributed and/or modified
-%
-% 1. under the LaTeX Project Public License and/or
-% 2. under the GNU Public License.
-%
-% See the file doc/licenses/LICENSE for more details.
-
-
 % Common packages
-\usepackage[german]{babel}
 \usepackage[latin1]{inputenc}
 \usepackage{times}
 \mode<article>
@@ -25,24 +14,23 @@
 \usepackage{colortbl}
 \usepackage{yfonts}
 \usepackage{colortbl}
-%\usepackage{translator} % comment this, if not available
 
 
 % Common settings for all lectures in this course
 
-\def\lecturename{Logik fr Informatiker}
+\def\lecturename{Robotic Validation of AFM and Beyod}
 
 \title{\insertlecture}
 
-\author{Till Tantau}
+\author{M O Faruque Sarker}
 
 \institute
 {
-  Institut fr Theoretische Informatik\\
-  Universitt zu Lbeck
+  Robotic Intelligence Lab\\
+  University of Wales, Newport
 }
 
-\subject{Vorlesung \lecturename}
+\subject{ \lecturename}
 
 
 
