--- a/Thesis-Sarker-MOF-2010.tex
+++ b/Thesis-Sarker-MOF-2010.tex
@@ -282,6 +282,13 @@ S_{j}^{i} = tanh\{\frac{k_{j}^{i}}{d_{ij}+\delta } \phi _{j}\}
 \item \scriptsize Stigmergic communication
 \end{enumerate}
 \end{block}
+\begin{block}{\small Other issues}
+\begin{enumerate}
+\item \scriptsize Enable learning/forgetting in controller
+\item \scriptsize Perception of distance $\Leftrightarrow$ localization
+\item \scriptsize Provide multiple tasks (include random-walk)
+\end{enumerate}
+\end{block}
 \end{columns}  
 \end{frame}	
 %-----------------------------------------------------------
