--- a/Thesis-Sarker-MOF-2010.tex
+++ b/Thesis-Sarker-MOF-2010.tex
@@ -1,6 +1,7 @@
 % Setup appearance:
-\documentclass[handout,draft]{beamer}
-%\usetheme{Frankfurt} % right index Marburg
+%\documentclass[handout,draft]{beamer}
+\documentclass{beamer}
+\usetheme{Frankfurt} % right index Marburg
 \usefonttheme[onlylarge]{structurebold}
 \setbeamerfont*{frametitle}{size=\normalsize,series=\bfseries}
 \setbeamertemplate{navigation symbols}{}
