--- a/Thesis-Sarker-MOF-2010.tex
+++ b/Thesis-Sarker-MOF-2010.tex
@@ -218,7 +218,7 @@ $\rightarrow$ \small no costly communication or computation overhead.
 	\hline
 	Green edges &  attractive fields of no-task option shown as a particular task (w)\\
 	\hline
-	Red lines & not edges, but represent how each agent is allocated to a single task.\\% at any point in time\\
+	Black dashed edges & not edges, but represent how each agent is allocated to a single task.\\% at any point in time\\
 	\hline
       \end{tabular}
 \end {scriptsize}
@@ -678,7 +678,71 @@ $\rightarrow$ \small using \textbf{D-Bus} inter-process communication % technolo
     $\rightarrow$ \small as a property of self-regulation of individuals.
     \item \normalsize \alert{Real-world implementation}\\
     $\rightarrow$ \small e.g. warehouse automation, manufacturing shop-floor or any other multi-tasking environment.
+     \item \normalsize \alert{Studying the role of formal structure on non-formal self-organization}\\
+    $\rightarrow$ \small see in next few slides.
     \end{itemize}
+\end{frame}
+%%-----------------------------------
+\begin{frame}[t]{How long do you think they'll take to organize themselves in rows and start the Prayer?}
+\begin{columns}
+\column{0.5\linewidth}
+\begin{figure}
+\centering
+%\subfigure[\small Changes in task-urgency (CCM)]{
+\includegraphics[width=0.75\linewidth]
+{/media/Preload/Pub2010/ThoughtsLinedUp/photos/kabah-image001.eps}
+%}
+\caption{\scriptsize The crowd of \alert{3 million Muslims} preparing for Prayer at the holy mosque Kaaba.}
+\end{figure}
+%%
+
+%%
+\column{0.5\linewidth}
+\vspace*{-1cm}
+\begin{figure}
+%\subfigure[\small Shop-floor work-load]{
+\includegraphics[width=0.99\linewidth]{/media/Preload/Pub2010/ThoughtsLinedUp/photos/kabah-image002.eps}
+\caption{\scriptsize They are from countries all over the world \alert{with different languages, and not trained for any military drills.}}
+\label{fig:r2}
+\end{figure}
+%%
+\end{columns}
+\end{frame}
+%-----------------------------------------------------
+\begin{frame}[t]{But when the Prayer time comes...}
+\begin{figure}
+\centering
+\includegraphics[width=0.75\linewidth]
+{/media/Preload/Pub2010/ThoughtsLinedUp/photos/kabah-imam.eps}
+\caption{\small The leader of the congregation (\textit{Sheikh Sudais of Makkah}) stands up and says \alert{ESTAWOO == Arrange Yourselves}}
+\end{figure}
+\end{frame}
+%-----------------------------------------------------
+\begin{frame}[t]{What happens then...?}
+\begin{columns}
+\column{0.5\linewidth}
+\vspace*{-0.2cm}
+\begin{figure}
+\centering
+%\subfigure[\small Changes in task-urgency (CCM)]{
+\includegraphics[width=0.99\linewidth]
+{/media/Preload/Pub2010/ThoughtsLinedUp/photos/kabah-image005.eps}
+%}
+\caption{\small  Within seconds, the whole scene changed}
+\end{figure}
+%%
+
+%%
+\column{0.5\linewidth}
+%\vspace*{-1cm}
+\begin{figure}
+%\subfigure[\small Shop-floor work-load]{
+\includegraphics[width=0.93\linewidth]{/media/Preload/Pub2010/ThoughtsLinedUp/photos/kabah-image004.eps}
+\caption{\small \alert{The crowd of 3 million Muslims arranged themselves in organized rows in NO TIME!}}
+\label{fig:r2}
+\end{figure}
+%%
+\end{columns}
 \end{frame}
 %%%%%%%%%%%%%%
 \end{document}
